MacViews: Fix scrolling when clicking on the views::ScrollView scroll track

Currently the mouse up event is lost, resulting in the repeating timer
never resetting.

CocoaScrollBar just needs to invoke super::OnMouseReleased().

Sets up views::ScrollView for event testing, and adds a test.

BUG=632261

Review-Url: https://codereview.chromium.org/2192443003
Cr-Commit-Position: refs/heads/master@{#409114}

Former-commit-id: c2f76449767bc5a1e426bba55ae1c52aab69ff75